2018-01-31  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/84088
	* trans-expr.c (gfc_conv_procedure_call): If the parm expr is
	an address expression passed to an assumed rank dummy, convert
	to an indirect reference.

2018-01-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/84088
	* gfortran.dg/pr84088.f90 : New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257262 138bc75d-0d04-0410-961f-82ee72b054a4